diabetes notebook update

--- a/notebooks/00_diabetes_classifier.ipynb
+++ b/notebooks/00_diabetes_classifier.ipynb
@@ -27,6 +27,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c73005d9-c8ac-464a-be0d-df524e114ffc",
+   "metadata": {},
+   "source": [
+    "# Data Source\n",
+    "\n",
+    "`https://www.kaggle.com/datasets/alexteboul/diabetes-health-indicators-dataset`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d6bc3059-ee44-43fc-b297-b096d1b6cd16",
    "metadata": {},
    "source": [
@@ -446,14 +456,6 @@
    "source": [
     "df_predict = pd.read_csv('../dados/diabetes_predict.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4a9fdd13-31ba-4c03-9005-41f2fb97cf09",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
