--- a/notebooks/11_gcloud_basics_cli.ipynb
+++ b/notebooks/11_gcloud_basics_cli.ipynb
@@ -97,8 +97,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ORGANIZATION = 906807308400\n",
-    "PROJECT_ID = 84023181660"
+    "ORGANIZATION = ''\n",
+    "PROJECT_ID = ''"
    ]
   },
   {
