--- a/notebooks/13_vertex_ai_ui_based_v0.ipynb
+++ b/notebooks/13_vertex_ai_ui_based_v0.ipynb
@@ -126,9 +126,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ORGANIZATION = 906807308400\n",
-    "PROJECT_ID = '84023181660'\n",
-    "REGION = \"us-central1\""
+    "ORGANIZATION = ''\n",
+    "PROJECT_ID = ''\n",
+    "REGION = \"\""
    ]
   },
   {
@@ -140,7 +140,7 @@
    "source": [
     "aiplatform.init(project=PROJECT_ID, location=REGION)\n",
     "gcs = storage.Client(project=PROJECT_ID)\n",
-    "bucket = gcs.bucket(\"insper-pads-cloud\")"
+    "bucket = gcs.bucket(\"\")"
    ]
   },
   {
