--- a/notebooks/14_bigquery_ml.ipynb
+++ b/notebooks/14_bigquery_ml.ipynb
@@ -47,11 +47,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ORGANIZATION = 906807308400\n",
-    "PROJECT_ID = '84023181660'\n",
-    "REGION = \"us-central1\"\n",
+    "ORGANIZATION = ''\n",
+    "PROJECT_ID = ''\n",
+    "REGION = \"\"\n",
     "\n",
-    "BUCKET = 'bucket-donald-ds'"
+    "BUCKET = ''"
    ]
   },
   {
@@ -459,9 +459,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This run will create BQML model: 84023181660.teste.bqml_logistic-regression_20251209140511\n",
+      "This run will create BQML model: 84023181660.teste.bqml_logistic-regression_20251213144617\n",
       "This run will create Vertex AI model: 84023181660.teste.bqml_bqml_logistic-regression\n",
-      "The runs timestamp Is: 20251209140511\n"
+      "The runs timestamp Is: 20251213144617\n"
      ]
     }
    ],
@@ -482,7 +482,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "CREATE OR REPLACE MODEL `84023181660.teste.bqml_logistic-regression_20251209140511`\n",
+      "CREATE OR REPLACE MODEL `84023181660.teste.bqml_logistic-regression_20251213144617`\n",
       "OPTIONS (\n",
       "        model_type = 'LOGISTIC_REG',\n",
       "        auto_class_weights = TRUE,\n",
@@ -494,7 +494,7 @@
       "        data_split_method = 'CUSTOM',\n",
       "        MODEL_REGISTRY = 'VERTEX_AI',\n",
       "        VERTEX_AI_MODEL_ID = 'bqml_bqml_logistic-regression',\n",
-      "        VERTEX_AI_MODEL_VERSION_ALIASES = ['run-20251209140511']\n",
+      "        VERTEX_AI_MODEL_VERSION_ALIASES = ['run-20251213144617']\n",
       "    ) AS\n",
       "SELECT * EXCEPT(ML_SPLIT),\n",
       "    CASE\n",
@@ -543,7 +543,7 @@
     {
      "data": {
       "text/plain": [
-       "<google.cloud.bigquery.table._EmptyRowIterator at 0xffff1faf82f0>"
+       "<google.cloud.bigquery.table._EmptyRowIterator at 0xffff407a82f0>"
       ]
      },
      "execution_count": 15,
@@ -565,7 +565,7 @@
     {
      "data": {
       "text/plain": [
-       "90.946"
+       "77.385"
       ]
      },
      "execution_count": 16,
@@ -1037,7 +1037,7 @@
        "      <td>0.671840</td>\n",
        "      <td>0.671757</td>\n",
        "      <td>0.2</td>\n",
-       "      <td>5785</td>\n",
+       "      <td>5225</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1046,7 +1046,7 @@
        "      <td>0.650734</td>\n",
        "      <td>0.650400</td>\n",
        "      <td>0.4</td>\n",
-       "      <td>5417</td>\n",
+       "      <td>6138</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1055,7 +1055,7 @@
        "      <td>0.638227</td>\n",
        "      <td>0.637511</td>\n",
        "      <td>0.8</td>\n",
-       "      <td>7003</td>\n",
+       "      <td>4448</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1064,7 +1064,7 @@
        "      <td>0.621793</td>\n",
        "      <td>0.620928</td>\n",
        "      <td>1.6</td>\n",
-       "      <td>6831</td>\n",
+       "      <td>5934</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1073,7 +1073,7 @@
        "      <td>0.580226</td>\n",
        "      <td>0.579643</td>\n",
        "      <td>3.2</td>\n",
-       "      <td>6722</td>\n",
+       "      <td>5987</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1082,7 +1082,7 @@
        "      <td>0.548311</td>\n",
        "      <td>0.547563</td>\n",
        "      <td>6.4</td>\n",
-       "      <td>6720</td>\n",
+       "      <td>4937</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1091,7 +1091,7 @@
        "      <td>0.508128</td>\n",
        "      <td>0.508140</td>\n",
        "      <td>12.8</td>\n",
-       "      <td>7592</td>\n",
+       "      <td>6795</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1099,13 +1099,13 @@
       ],
       "text/plain": [
        "   training_run  iteration      loss  eval_loss  learning_rate  duration_ms\n",
-       "0             0          0  0.671840   0.671757            0.2         5785\n",
-       "1             0          1  0.650734   0.650400            0.4         5417\n",
-       "2             0          2  0.638227   0.637511            0.8         7003\n",
-       "3             0          3  0.621793   0.620928            1.6         6831\n",
-       "4             0          4  0.580226   0.579643            3.2         6722\n",
-       "5             0          5  0.548311   0.547563            6.4         6720\n",
-       "6             0          6  0.508128   0.508140           12.8         7592"
+       "0             0          0  0.671840   0.671757            0.2         5225\n",
+       "1             0          1  0.650734   0.650400            0.4         6138\n",
+       "2             0          2  0.638227   0.637511            0.8         4448\n",
+       "3             0          3  0.621793   0.620928            1.6         5934\n",
+       "4             0          4  0.580226   0.579643            3.2         5987\n",
+       "5             0          5  0.548311   0.547563            6.4         4937\n",
+       "6             0          6  0.508128   0.508140           12.8         6795"
       ]
      },
      "execution_count": 20,
@@ -1749,7 +1749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "61a3512c-6fa5-4719-844c-7babd018c458",
    "metadata": {},
    "outputs": [
@@ -1785,35 +1785,35 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>[{'label': 1, 'prob': 0.7447458657292956}, {'l...</td>\n",
+       "      <td>[{'label': 1, 'prob': 0.7447458657293569}, {'l...</td>\n",
        "      <td>TEST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>[{'label': 1, 'prob': 0.727184585330215}, {'la...</td>\n",
+       "      <td>[{'label': 1, 'prob': 0.7271845853302593}, {'l...</td>\n",
        "      <td>TEST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>[{'label': 1, 'prob': 0.22471921600557096}, {'...</td>\n",
+       "      <td>[{'label': 1, 'prob': 0.22471921600557626}, {'...</td>\n",
        "      <td>TEST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>[{'label': 1, 'prob': 0.4112645792287312}, {'l...</td>\n",
+       "      <td>[{'label': 1, 'prob': 0.4112645792287173}, {'l...</td>\n",
        "      <td>TEST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>[{'label': 1, 'prob': 0.10512437717632853}, {'...</td>\n",
+       "      <td>[{'label': 1, 'prob': 0.10512437717632106}, {'...</td>\n",
        "      <td>TEST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1827,35 +1827,35 @@
        "      <th>5173</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>[{'label': 1, 'prob': 0.1528405268013999}, {'l...</td>\n",
+       "      <td>[{'label': 1, 'prob': 0.15284052680138482}, {'...</td>\n",
        "      <td>TEST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5174</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>[{'label': 1, 'prob': 0.7888184041489233}, {'l...</td>\n",
+       "      <td>[{'label': 1, 'prob': 0.7888184041489615}, {'l...</td>\n",
        "      <td>TEST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5175</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>[{'label': 1, 'prob': 0.0885013902011769}, {'l...</td>\n",
+       "      <td>[{'label': 1, 'prob': 0.08850139020117259}, {'...</td>\n",
        "      <td>TEST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5176</th>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>[{'label': 1, 'prob': 0.6443668842070503}, {'l...</td>\n",
+       "      <td>[{'label': 1, 'prob': 0.6443668842070687}, {'l...</td>\n",
        "      <td>TEST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5177</th>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>[{'label': 1, 'prob': 0.18158527579695802}, {'...</td>\n",
+       "      <td>[{'label': 1, 'prob': 0.18158527579694297}, {'...</td>\n",
        "      <td>TEST</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1878,22 +1878,22 @@
        "5177         1                   0   \n",
        "\n",
        "                               predicted_Diabetes_probs ML_SPLIT  \n",
-       "0     [{'label': 1, 'prob': 0.7447458657292956}, {'l...     TEST  \n",
-       "1     [{'label': 1, 'prob': 0.727184585330215}, {'la...     TEST  \n",
-       "2     [{'label': 1, 'prob': 0.22471921600557096}, {'...     TEST  \n",
-       "3     [{'label': 1, 'prob': 0.4112645792287312}, {'l...     TEST  \n",
-       "4     [{'label': 1, 'prob': 0.10512437717632853}, {'...     TEST  \n",
+       "0     [{'label': 1, 'prob': 0.7447458657293569}, {'l...     TEST  \n",
+       "1     [{'label': 1, 'prob': 0.7271845853302593}, {'l...     TEST  \n",
+       "2     [{'label': 1, 'prob': 0.22471921600557626}, {'...     TEST  \n",
+       "3     [{'label': 1, 'prob': 0.4112645792287173}, {'l...     TEST  \n",
+       "4     [{'label': 1, 'prob': 0.10512437717632106}, {'...     TEST  \n",
        "...                                                 ...      ...  \n",
-       "5173  [{'label': 1, 'prob': 0.1528405268013999}, {'l...     TEST  \n",
-       "5174  [{'label': 1, 'prob': 0.7888184041489233}, {'l...     TEST  \n",
-       "5175  [{'label': 1, 'prob': 0.0885013902011769}, {'l...     TEST  \n",
-       "5176  [{'label': 1, 'prob': 0.6443668842070503}, {'l...     TEST  \n",
-       "5177  [{'label': 1, 'prob': 0.18158527579695802}, {'...     TEST  \n",
+       "5173  [{'label': 1, 'prob': 0.15284052680138482}, {'...     TEST  \n",
+       "5174  [{'label': 1, 'prob': 0.7888184041489615}, {'l...     TEST  \n",
+       "5175  [{'label': 1, 'prob': 0.08850139020117259}, {'...     TEST  \n",
+       "5176  [{'label': 1, 'prob': 0.6443668842070687}, {'l...     TEST  \n",
+       "5177  [{'label': 1, 'prob': 0.18158527579694297}, {'...     TEST  \n",
        "\n",
        "[5178 rows x 4 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1904,18 +1904,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "7a766be5-5161-4706-b770-f27e58a8be04",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[{'label': 0, 'prob': 0.2552541342707044},\n",
-       "  {'label': 1, 'prob': 0.7447458657292956}]]"
+       "[[{'label': 0, 'prob': 0.25525413427064314},\n",
+       "  {'label': 1, 'prob': 0.7447458657293569}]]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1928,7 +1928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "3aad4004-18c1-4561-bad5-9fb5394b17d5",
    "metadata": {},
    "outputs": [
@@ -1939,7 +1939,7 @@
        "       [ 249,  544]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1950,17 +1950,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "156881e1-26e6-4f5e-bdff-783827f3eb10",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0xffff1faf8980>"
+       "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0xffff407a8980>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
